feat: add basic styles

--- a/main.scss
+++ b/main.scss
@@ -3,5 +3,6 @@
 @import 'styles/helpers/reset';
 @import 'styles/helpers/scaffolding';
 
+@import 'styles/components/container';
 @import 'styles/components/keyboard';
 @import 'styles/components/button';
