--- a/main.css
+++ b/main.css
@@ -75,4 +75,200 @@ html {
   font-family: 'Roboto-Bold';
   font-size: 20px;
 }
+
+body {
+  background-color: #55C5FF;
+}
+
+.container {
+  width: 1021px;
+  margin: 0 auto;
+}
+
+.keyboard {
+  margin-top: 50px;
+}
+
+.keyboard__field {
+  width: 100%;
+}
+
+.keyboard__textarea {
+  width: 100%;
+  height: 200px;
+  resize: none;
+  border-radius: 10px;
+  padding: 10px;
+  font-family: 'Roboto-Regular', monospace;
+  font-size: 1.2rem;
+  color: #5B6497;
+}
+
+.keyboard__textarea:focus {
+  outline-width: 0;
+}
+
+.keyboard__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #4CBEFA;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 2px 0 #ffffff;
+          box-shadow: 0 0 2px 0 #ffffff;
+}
+
+.keyboard__buttons-left {
+  width: 799px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.keyboard__buttons-right {
+  margin-left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.keyboard__buttons-right .keyboard__buttons-row:first-child {
+  margin-bottom: auto;
+}
+
+.keyboard__buttons-right .keyboard__buttons-row:nth-child(2) {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.keyboard__buttons-row {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 6px;
+}
+
+.keyboard__buttons-row:last-child {
+  margin-bottom: 0;
+}
+
+.button {
+  background-color: white;
+  width: 50px;
+  height: 50px;
+  margin-right: 6px;
+  border-radius: 6px;
+  border-width: 0px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-shadow: -3px 3px #9AD3FA;
+          box-shadow: -3px 3px #9AD3FA;
+  border: 3px solid #9AD3FA;
+  cursor: pointer;
+}
+
+.button:last-child {
+  margin-right: 0;
+}
+
+.button_default {
+  font-family: 'Roboto-Regular' monospace;
+  font-weight: 400;
+  font-size: 0.8rem;
+  color: #5B6497;
+}
+
+.button_special {
+  font-family: 'Roboto-Bold', monospace;
+  font-weight: 700;
+  font-size: 0.55rem;
+  color: #5B6497;
+}
+
+.button_special_backspace {
+  width: 71px;
+}
+
+.button_special_tab {
+  width: 71px;
+}
+
+.button_special_capslock {
+  width: 88.5px;
+  position: relative;
+}
+
+.button_special_capslock::before {
+  content: '';
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: red;
+  position: absolute;
+  top: 7.5px;
+  right: 7.5px;
+}
+
+.button_special_enter {
+  width: 88.5px;
+}
+
+.button_special_shift {
+  width: 116.5px;
+}
+
+.button_special_ctrl {
+  width: 116.5px;
+}
+
+.button_special_space {
+  width: 386px;
+}
+
+.button_green {
+  -webkit-box-shadow: -3px 3px #78E2AA;
+          box-shadow: -3px 3px #78E2AA;
+  border: 3px solid #78E2AA;
+}
+
+.button_blue {
+  -webkit-box-shadow: -3px 3px #63E3FF;
+          box-shadow: -3px 3px #63E3FF;
+  border: 3px solid #63E3FF;
+}
+
+.button_purple {
+  -webkit-box-shadow: -3px 3px #F69EC4;
+          box-shadow: -3px 3px #F69EC4;
+  border: 3px solid #F69EC4;
+}
+
+.button_orange {
+  -webkit-box-shadow: -3px 3px #FFC07E;
+          box-shadow: -3px 3px #FFC07E;
+  border: 3px solid #FFC07E;
+}
+
+.button_yellow {
+  -webkit-box-shadow: -3px 3px #FFEF7E;
+          box-shadow: -3px 3px #FFEF7E;
+  border: 3px solid #FFEF7E;
+}
+
+.button_light-orange {
+  -webkit-box-shadow: -3px 3px #FFD87E;
+          box-shadow: -3px 3px #FFD87E;
+  border: 3px solid #FFD87E;
+}
 /*# sourceMappingURL=main.css.map */
