--- a/styles/helpers/_vars.scss
+++ b/styles/helpers/_vars.scss
@@ -6,6 +6,7 @@ $fifthColor: #63E3FF;
 $sixthColor: #F69EC4;
 $seventhColor: #FFC07E;
 $eighthColor: #FFEF7E;
+$ninethColor: #FFD87E;
 
 $textColor1: #76A7D1;
 $textColor2: #5B6497;
