--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -11,7 +11,6 @@
     
     box-shadow: -3px 3px $thirdColor;
     border: 3px solid $thirdColor;
-
     cursor: pointer;
 
     &:last-child {
@@ -72,7 +71,7 @@
             width: 330px;
         }
 
-        &_arrow-right, &_arrow-left, &_arrow-top, &_arrow-bottom {
+        &_arrow {
             font-size: 1rem;
         }
     }
