--- a/styles/helpers/_fonts.scss
+++ b/styles/helpers/_fonts.scss
@@ -1,13 +1,8 @@
 @font-face {
-    font-family: 'Roboto-Regular';
-    src: url('./fonts/Roboto/Roboto-Regular.ttf') format('truetype');
+    font-family: 'RobotoMono';
+    src: url('./fonts/RobotoMono/RobotoMono-Regular.eot?iefix') format('eot'),
+    url('./fonts/RobotoMono/RobotoMono-Regular.ttf') format('truetype'),
+    url('./fonts/RobotoMono/RobotoMono-Regular.woff') format('woff');
     font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Roboto-Bold';
-    src: url('./fonts/Roboto/Roboto-Bold.ttf') format('truetype');
-    font-weight: 700;
     font-style: normal;
 }
