--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -28,7 +28,7 @@
     &_default {
         font-family: 'RobotoMono', monospace;
         font-weight: 400;
-        font-size: 1rem;
+        font-size: 0.8rem;
         color: $textColor2;
     }
 
@@ -87,30 +87,46 @@
     &_green {
         box-shadow: -3px 3px $fourthColor;
         border: 3px solid $fourthColor;
+        &.button_active {
+            background-color: $fourthColor;
+            box-shadow: 0 0 $fourthColor;
+        }
     }
     &_blue {
         box-shadow: -3px 3px $fifthColor;
         border: 3px solid $fifthColor;
+        &.button_active {
+            background-color: $fifthColor;
+            box-shadow: 0 0 $fifthColor;
+        }
     }
     &_purple {
         box-shadow: -3px 3px $sixthColor;
         border: 3px solid $sixthColor;
+        &.button_active {
+            background-color: $sixthColor;
+            box-shadow: 0 0 $sixthColor;
+        }
     }
     &_orange {
         box-shadow: -3px 3px $seventhColor;
         border: 3px solid $seventhColor;
+        &.button_active {
+            background-color: $seventhColor;
+            box-shadow: 0 0 $seventhColor;
+        }
     }
     &_yellow {
         box-shadow: -3px 3px $eighthColor;
         border: 3px solid $eighthColor;
+        &.button_active {
+            background-color: $eighthColor;
+            box-shadow: 0 0 $eighthColor;
+        }
     }
-    &_light-orange {
-        box-shadow: -3px 3px $ninethColor;
-        border: 3px solid $ninethColor;
-    }
-
     &_active {
         transform: translate(-3px, 3px);
+        background-color: $thirdColor;
         box-shadow: 0 0 $thirdColor;
     }
 }
