--- a/main.css
+++ b/main.css
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: 'RobotoMono';
-  src: url("./fonts/RobotoMono/RobotoMono-Regular.eot?iefix") format("eot"), url("./fonts/RobotoMono/RobotoMono-Regular.ttf") format("truetype"), url("./fonts/RobotoMono/RobotoMono-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-}
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -65,7 +58,7 @@ table {
 }
 
 html {
-  font-family: 'OpenGost type A TT', monospace;
+  font-family: 'Roboto Slab', serif;
   font-size: 20px;
 }
 
@@ -88,12 +81,12 @@ body {
 
 .keyboard__textarea {
   width: 100%;
-  height: 200px;
+  height: 300px;
   resize: none;
   border-radius: 10px;
   padding: 10px;
-  font-family: 'RobotoMono', monospace;
-  font-size: 1.2rem;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.4rem;
   font-weight: 400;
   color: #5B6497;
 }
@@ -157,6 +150,7 @@ body {
 }
 
 .button {
+  font-family: 'PT Sans', sans-serif;
   background-color: white;
   width: 50px;
   height: 50px;
@@ -175,8 +169,14 @@ body {
   transition-property: background-color, -webkit-transform, -webkit-box-shadow;
   transition-property: transform, box-shadow, background-color;
   transition-property: transform, box-shadow, background-color, -webkit-transform, -webkit-box-shadow;
-  -webkit-transition-duration: linear, linear, linear;
-          transition-duration: linear, linear, linear;
+}
+
+.button_active {
+  -webkit-transform: translate(-3px, 3px);
+          transform: translate(-3px, 3px);
+  background-color: #9AD3FA;
+  -webkit-box-shadow: 0 0 #9AD3FA;
+          box-shadow: 0 0 #9AD3FA;
 }
 
 .button:last-child {
@@ -188,14 +188,12 @@ body {
 }
 
 .button_default {
-  font-family: 'RobotoMono', monospace;
   font-weight: 400;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   color: #5B6497;
 }
 
 .button_special {
-  font-family: 'RobotoMono', monospace;
   font-weight: 700;
   font-size: 0.5rem;
   color: #5B6497;
@@ -212,19 +210,6 @@ body {
 
 .button_special_capslock {
   width: 88.5px;
-  position: relative;
-}
-
-.button_special_capslock::before {
-  content: '';
-  display: block;
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  background-color: red;
-  position: absolute;
-  top: 5px;
-  right: 5px;
 }
 
 .button_special_enter {
@@ -305,13 +290,5 @@ body {
   background-color: #FFEF7E;
   -webkit-box-shadow: 0 0 #FFEF7E;
           box-shadow: 0 0 #FFEF7E;
-}
-
-.button_active {
-  -webkit-transform: translate(-3px, 3px);
-          transform: translate(-3px, 3px);
-  background-color: #9AD3FA;
-  -webkit-box-shadow: 0 0 #9AD3FA;
-          box-shadow: 0 0 #9AD3FA;
 }
 /*# sourceMappingURL=main.css.map */
