--- a/styles/components/_keyboard.scss
+++ b/styles/components/_keyboard.scss
@@ -7,13 +7,13 @@
 
     &__textarea {
         width: 100%;
-        height: 200px;
+        height: 300px;
         resize: none;
         border-radius: 10px;
         padding: 10px;
 
-        font-family: 'RobotoMono', monospace;
-        font-size: 1.2rem;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 1.4rem;
         font-weight: 400;
         color: $textColor2;
 
